# yooper

./: Cargo.toml  README.md
.builds/: nightly.yml  stable.yml
src/: lib.rs  main.rs  message.rs  tests.rs
src/message/: decoder.rs  encoder.rs
src/packet/: decoder.rs  encoder.rs
yooper/: Cargo.toml
yooper/src/: description.rs  discovery.rs  errors.rs  lib.rs  main.rs  message.rs  packet.rs  tests.rs
yooper/src/description/: tests.rs
yooper/src/description/testdata/: igd.xml
yooper/src/message/: codec.rs  tests.rs
yooper/src/packet/: decoder.rs  encoder.rs
yooper/src/ssdp/: message.rs  mod.rs  packet.rs
yooper/src/ssdp/message/: codec.rs  tests.rs  types.rs
yooper/src/ssdp/packet/: decoder.rs  encoder.rs
yooper_derive/: Cargo.toml
yooper_derive/src/: ast.rs  from_message.rs  from_packet.rs  lib.rs  to_message.rs  to_packet.rs
