[package]
name = "yooper"
version = "0.1.0"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2018"
license = "BSD-3-Clause"

[features]
default = ["description", "cli"]
description = ["reqwest", "serde", "serde_with", "serde-xml-rs"]
cli = ["clap"]

[dependencies]
bytes = "0.5.4"
yooper_derive = { path = "../yooper_derive" }
futures = "0.3"
indexmap = "1.3"
mac_address = "1.0"
thiserror = "1.0"
os_info = "2.0"

[dependencies.tokio]
version = "0.2.20"
features = ["udp", "macros", "rt-threaded", "time"]

[dependencies.tokio-util]
version = "0.3.1"
features = ["udp", "codec"]


[dependencies.uuid]
version = "0.8"
features = ["v1"]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies.serde-xml-rs]
version = "0.4"
optional = true

[dependencies.serde_with]
version = "1.4"
optional = true

[dependencies.reqwest]
version = "0.10"
optional = true
default-features = false

[dependencies.clap]
version = "2.33"
optional = true