[package]
name = "yooper"
version = "0.1.0"
authors = ["Liz Frost <web@stillinbeta.com>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://git.sr.ht/~liz/yooper/"
categories = ["command-line-utilities", "network-programming", "api-bindings"]
readme = "README.md"
description = "An async UPnP library and CLI"
keywords = ["upnp"]

[features]
default = ["description", "cli"]
description = ["reqwest", "serde", "serde_with", "serde-xml-rs"]
cli = ["clap"]

[dependencies]
bytes = "1.0.0"
yooper_derive = { version = "=0.1.0", path = "../yooper_derive" }
futures = "0.3"
indexmap = "1.3"
mac_address = "1.0"
thiserror = "1.0"
os_info = "2.0"

[dependencies.tokio]
version = "^1.0.1"
features = ["net", "macros", "rt", "time", "rt-multi-thread"]

[dependencies.tokio-util]
version = "0.6.0"
features = ["net", "codec"]


[dependencies.tokio-stream]
version = "0.1.0"

[dependencies.uuid]
version = "0.8"
features = ["v1"]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies.serde-xml-rs]
version = "0.4"
optional = true

[dependencies.serde_with]
version = "1.4"
optional = true

[dependencies.reqwest]
version = "0.11"
optional = true
default-features = false

[dependencies.clap]
version = "2.33"
optional = true
