[package]
name = "yooper_derive"
description = "macros for yooper"
version = "0.1.0"
repository = "https://git.sr.ht/~liz/yooper/"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2= "1.0"